--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <script>
-        var url = "wss://" + window.location.host + "/ws";
+        var url = "wss://" + window.location.host + "/ws-pingpong-latency";
         var ws = new WebSocket(url);
         var myid = -1;
 
